# mindev

./: .clang-format  CMakeLists.txt  Makefile  README.md  resources.rc
.github/workflows/: release.yml
cmake/: GetGitRevision.cmake
icons/: icons.qrc
src/: constants.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  stylemanager.cpp  stylemanager.h
src/tools/: baseconvertertool.cpp  baseconvertertool.h  storageconvertertool.cpp  storageconvertertool.h  subnetcalculatortool.cpp  subnetcalculatortool.h  toolfactory.cpp  toolfactory.h  toolinterface.h
styles/: blue.qss  dark.qss  default.qss  light.qss  mixed.qss
